# verus-mcp

./: Cargo.toml  README.md  test_mcp.py
src/: editor.rs  index.rs  indexer.rs  main.rs  main_standalone.rs  params_de.rs  parser.rs  server.rs  types.rs  watcher.rs
