[package]
name = "verus-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "verus-mcp"
path = "src/main.rs"

[[bin]]
name = "verus-mcp-standalone"
path = "src/main_standalone.rs"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.25"
tree-sitter-verus = { path = "../tree-sitter-verus" }
serde = { version = "1", features = ["derive"] }
schemars = "1"
walkdir = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strsim = "0.11"
regex = "1"
serde_json = "1"
notify = "8.2.0"
